<resources>
    <string name="app_name">AppNews</string>
    <string name="description">Descrição</string>
    <string name="title">Titulo</string>
    <string name="source">Fonte: </string>
    <string name="published_at"><b>Publicado em:</b></string>
    <string name="favorite">Favoritos</string>
    <string name="search_menu">Pesquisar…</string>
    <string name="search_query_hint">Pesquise noticias pelo mundo…</string>
    <string name="article_saved_successful">Artigo salvo com sucesso!</string>
    <string name="article_delete_successful">Artigo deletado com sucesso</string>
    <string name="undo">desfazer</string>
    <string name="image">image</string>
</resources>